22.sep (ws)
      - tuplet bracket was only movable in x-direction in edit mode
      (la)
      - fix #7211: Copy/Paste notes over rest of diff. durations in staves
21.sep (la)
      - fix #7167: Time signature change causes triplets to corrupt score
      - fix #7142: Crescendo & delete measures problems
      - fix #7197: MuseScore fails to open MSCZ files with capitals
      - fix #6932: Changing notehead of a breve crash
      - add access to DPI, notehead, note bounding box and note position from plugin framework
            (Patch by Mikhail Eliseev)
14.sep (la)
      - fix #7077: Applying double-note tremolo to dotted notes fails and alter measure duration
30.aug (db)
      - fix #6937: Measure Properties should be modal dialog
29.aug (la)
      - fix #6775: Seg. fault by double clicking any element twice
      - fix #6888: When exchanging voice, voice 1 is removed
28.aug (la)
      - fix get keysig from plugin when concert pitch mode is set
24.aug (ws)
      - applied patch to rendermidi.cpp from Hugo Scott Whittle
22.aug (db)
      - fix #6735: C# for AltoSax in default soundfont is silent

 ======== MuseScore 0.9.6.2 released ==============
15.aug (la)
      - fix #6658: Natural in every keysig on mac PPC
      - fix #6508: Crash removing instrument with volta
      - fix #6706: Crash when inserting slurs from palette while editing text
      - fix #6740: Autosave works only the first time
10.aug (ws)
      - fix repeat command (ctrl+r) for staves > 1
6.aug (ws)
      - attempt to fix font problem (quarternote looks too big in text)
5.aug (la)
      - fix #6479: Crash when closing score during playback
      - fix #6505: Mixer is not refreshed when scores are switched
4.aug (la)
      - fix #6597: Close/reload crash on XP
      - fix #6624: Crash when deleting a tuplet from a MusicXML import
      - fix cursor move on repeatmeasure in plugin framework
      - fix instrument name containing flats for plugin framework
14.jul (ws)